# gelsight_driver

./: .gitmodules  .travis.yml  CMakeLists.txt  CaptureFrm.h  Makefile  MarkerTrack.cpp  README.md  VideoRecord.cpp  WindowDisplay.cpp  analyzeit.py  camera.h  gelsight_compare_heightmaps.cpp  gelsight_depth_driver.cpp  gelsight_groundtruth_gen.cpp  gelsight_lookup_gen.cpp  gelsight_raw_vis.cpp  gelsight_renderer.cpp  gelsight_sphere_depth_gen.cpp  main.cpp  mesh.h  rgbToGradientOctNode.hpp  shader.frag  shader.h  shader.vs
3D_reconstruction/: Cali_Aly1_Flat.mat  Demo_Reconstruct.m
3D_reconstruction/Func_3DReconstruct/: matchGrad.m
filter_data/: filter_00.txt  filter_01.txt  filter_02.txt  filter_10.txt  filter_11.txt  filter_12.txt  filter_20.txt  filter_21.txt  filter_22.txt
lib/ezOptionParser/: ezOptionParser.hpp
src/: CMakeLists.txt  CaptureFrm.cpp  MarkerTrack.cpp  do_ball_calibration.py  do_normal_and_depth_reconstruction.py  do_process_calibrations.py  do_rod_calibration.py  filtered_2017-08-22T19:03:38.648270.calib  gelsight_depth_driver.cc  gelsight_depth_driver.cpp  gelsight_depth_driver.h  gelsight_groundtruth_gen.cpp  gelsight_sphere_depth_gen.cpp  opencv_sandbox.py  poisson_reconstruct.py  run_gelsight_depth_driver.cc
src/matlab/: README.md
src/matlab/3D_reconstruction/Func_3DReconstruct/: fast_poisson2.m  iniFrame.m
src/old_drivers/: CMakeLists.txt  gelsight_compare_heightmaps.cpp  gelsight_lookup_gen.cpp
src/shear_app/: CMakeLists.txt  MarkerTrack.cpp  MarkerTrack.h  VideoRecord.h  WindowDisplay.h
